[metadata]
name = bybitHTTPX
version = 0.0.5
author = Shahar Brandman
author_email = shaharbrandman@gmail.com
description = a httpx wrapper for bybit API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShaharBrandman/bybitHTTPX
project_urls =
    Bug Tracker = https://github.com/ShaharBrandman/bybitHTTPX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    httpx==0.24.0

[options.packages.find]
where = .
